# SAM-Agent-WhatsApp

./: .env.example  .gitignore  ARCHITECTURE.md  DELIVERABLES.md  IMPLEMENTATION_COMPLETE.md  LANGGRAPH_COMPLETE.md  LICENSE  PHASE_4_2_COMPLETION.py  QUICK_REFERENCE.md  README.md  SKELETON_IMPLEMENTATION.md  check_memory_db.py  config.py  docker-compose.yml  exp_001_output.txt  main.py  phase3_trace_test.py  populate_memory.py  pyproject.toml  show_results.py  stm_check.py  stm_e2e_test.py  test_memory.py  test_routes.py  validate_langsmith.py  validate_observability.py  verify_memory_system.py  verify_skeleton.py
.github/workflows/: ci.yml
agent/: README.md  api.py  health.py  langgraph_orchestrator.py  memory_nodes.py  orchestrator.py  state_schema.py
agent/graph/: README.md
agent/intelligence/: __init__.py  fact_extraction.py  guardrails.py  memory_retrieval.py  metrics.py  tools.py
agent/mcp/: __init__.py  connectivity_test.py  external_client.py  guardrails.py
agent/memory/: README.md  __init__.py  base.py  cognee_adapter.py  long_term_base.py  long_term_qdrant.py  long_term_stub.py  long_term_types.py  sqlite.py  stub.py  types.py
agent/observability/: __init__.py  interface.py  store.py
agent/prompting/: __init__.py  prompt_builder.py
agent/state/: README.md
agent/tools/: README.md  __init__.py  web_search_tool.py
agent/tracing/: __init__.py  alarms.py  langsmith_tracer.py  langtrace_tracer.py  langtrace_tracer_placeholder.py  tracer.py  tracer_factory.py
api/: whatsapp_webhook.py
design/: langgraph_skeleton.md  memory_invariants.md  phase_3_1_closure.md
docker/: Dockerfile.agent
evaluation/: __init__.py  compare_runs.py
evaluation/aggregation/: __init__.py  per_run.py  per_session.py
evaluation/baselines/: baseline_v1.json
evaluation/metrics/: __init__.py  hallucination_proxies.py  latency_quality.py  memory_usefulness.py  retry_pressure.py  task_completion.py
evaluation/schemas/: __init__.py  metric_schema.py  trace_schema.py
evaluation/tests/: test_metrics.py
experiment_harness/: __init__.py  evaluator.py  executor.py  loader.py  phase_5_3_3_executor.py  reporter.py  reproducibility.py  runner.py
experiment_harness/tests/: test_harness_flow.py  test_phase_5_3_3.py
experiments/: __init__.py  exp_001_baseline.py
experiments/EXP-001/: dataset.json  executor.py  metrics.json  reproducibility.json  results.json  run.py  (+1 more)
inference/: __init__.py  base.py  ollama.py  stub.py  types.py
infra/: __init__.py  bootstrap.py  config.py
scripts/: inspect_short_term_memory.py  test_agent_endpoints.ps1  test_endpoints.ps1  test_observability.sh  validate_deployment.py
tests/: conftest.py
transport/: __init__.py
webhook/: __init__.py  telegram.py  telegram_voice.py
(+91 files in other folders)
