[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sam-agent"
version = "0.0.1"
description = "Stateful Agent Model - Production-oriented AI agent system"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "SAM Team"}
]

dependencies = [
    # Core dependencies
    "langgraph>=0.0.50",
    "langchain>=0.1.0",
    "pydantic>=2.0",
    # LLM
    "requests>=2.31.0",  # For Ollama API calls
    # STT (optional)
    "openai-whisper>=20230314",  # Local speech-to-text
    # TTS (optional)
    "TTS>=0.19.0",  # Coqui TTS
    # Long-term memory (optional)
    "qdrant-client>=2.7.0",  # Vector database client
    # Observability
    "langsmith>=0.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.0.290",
    "black>=23.0.0",
    "mypy>=1.5.0",
    "isort>=5.12.0",
]

[tool.setuptools.packages.find]
include = ["sam_agent"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W", "I"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=sam_agent --cov-report=html --cov-report=term-missing"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
